# physim

./: .gitignore  LICENSE  README.md  pyproject.toml
physim/: __main__.py
physim/models/: canvas.py  objects.py
