[tool.poetry]
authors = ["Gustav Odinger <65498475+gustavwilliam@users.noreply.github.com>"]
description = "Basic physics simulations"
license = "MIT"
name = "PhySim"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
keyboard = "^0.13.5"
pynput = "^1.7.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
